--- a/group 3.5 homepage and quiz/index.html
+++ b/group 3.5 homepage and quiz/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tennis world</title>
     <script scr="tennis.js"></script>
     <style>
 
@@ -328,7 +328,7 @@ nav.navbar-right a {
 
         <div class="heroandintroduction" style="background-image: url(media/playingtennis.jpg);">
             <h1 class="hero">TENNIS WORLD</h1><br><br><br><br>
-            <figcaption>Figure 1: people were playing tennis.</figcaption>
+            <figcaption>Figure 1: people were playing tennis.(photo taken by AAP and Tony McDonough)</figcaption>
           </div>
     </header>
 
@@ -341,7 +341,7 @@ nav.navbar-right a {
                 <div class="cardslists">
                 <figure>
                   <img class="cardimage" src="media/instruction.png" alt="Photo of people playing tennis">
-                  <figcaption>Figure 2:</figcaption>
+                  <figcaption>Figure 2:two tennis players.(photo taken by refrsports)</figcaption>
                 </figure>
                 </div>
                 <a href="instruction.html">
@@ -370,7 +370,7 @@ nav.navbar-right a {
                 <div class="cardslists">
                 <figure>
                   <img class="cardimage" src="media/tenniscourts.jpg" alt="Photo of tennis courts">
-                  <figcaption> Figure 3:</figcaption>
+                  <figcaption> Figure 3: A tennis court.(photo taken by tennis courts uk)</figcaption>
                 </figure>
                 </div>
              </div>
@@ -386,7 +386,7 @@ nav.navbar-right a {
                 <div class="cardslists">
                 <figure>
                   <img class="cardimage" src="media/quiz.jpg" alt="Photo of tennis equipments">
-                  <figcaption>Figure 4:</figcaption>
+                  <figcaption>Figure 4:some tennis equipments.(photo taken by uqsport)</figcaption>
                 </figure>
                 </div>
                 
@@ -416,7 +416,7 @@ nav.navbar-right a {
                 <div class="cardslists">
                 <figure>
                   <img class="cardimage" src="media/game.PNG" alt="Photo of tennis game">
-                  <figcaption> Figure 5:</figcaption>
+                  <figcaption> Figure 5: Tennis game.(photo taken by Weixin Zhang)</figcaption>
                 </figure>
                 </div>
              </div>
@@ -431,7 +431,7 @@ nav.navbar-right a {
                 <div class="cardslists">
                 <figure>
                   <img class="cardimageexplanation" src="media/explanation.jpg" alt="Photo of tennis equipment">
-                  <figcaption> Figure 6:</figcaption>
+                  <figcaption> Figure 6:A tennis ball.(photo taken by WTA)</figcaption>
                 </figure>
                 </div>
                 <div class="cardslists">
