--- a/group 3.5 homepage and quiz/index.html
+++ b/group 3.5 homepage and quiz/index.html
@@ -328,7 +328,7 @@ nav.navbar-right a {
 
         <div class="heroandintroduction" style="background-image: url(media/playingtennis.jpg);">
             <h1 class="hero">TENNIS WORLD</h1><br><br><br><br>
-            <figcaption>Figure 1: people were playing tennis.(photo taken by AAP and Tony McDonough)</figcaption>
+            <figcaption>Figure 1: People were playing tennis.(photo taken by AAP and Tony McDonough)</figcaption>
           </div>
     </header>
 
@@ -341,7 +341,7 @@ nav.navbar-right a {
                 <div class="cardslists">
                 <figure>
                   <img class="cardimage" src="media/instruction.png" alt="Photo of people playing tennis">
-                  <figcaption>Figure 2:two tennis players.(photo taken by refrsports)</figcaption>
+                  <figcaption>Figure 2: Two tennis players.(photo taken by refrsports)</figcaption>
                 </figure>
                 </div>
                 <a href="instruction.html">
@@ -386,7 +386,7 @@ nav.navbar-right a {
                 <div class="cardslists">
                 <figure>
                   <img class="cardimage" src="media/quiz.jpg" alt="Photo of tennis equipments">
-                  <figcaption>Figure 4:some tennis equipments.(photo taken by uqsport)</figcaption>
+                  <figcaption>Figure 4: Some tennis equipments.(photo taken by uqsport)</figcaption>
                 </figure>
                 </div>
                 
