--- a/group 3.5 homepage and quiz/quiz.html
+++ b/group 3.5 homepage and quiz/quiz.html
@@ -312,7 +312,7 @@ nav.navbar-right a {
             <a href="index.html">
             <button class="buttonforbacktohomepage" type="button">Back to Home Page</button>
         </a>
-            <figcaption>Figure 1: .</figcaption>
+            <figcaption>Figure 1: Some tennis equipments.(photo taken by uqsport).</figcaption>
           </div>
     </header>
 
